# cascade

./: .dockerignore  .gitignore  CLAUDE.md  LICENSE  OPEN_QUESTIONS.md  README.md  chain.testnet.toml  chain.toml  pyproject.toml  run_all_scores.sh
.github/workflows/: ci.yml  notify-rd.yml  publish-pool.yml  publish-worker.yml  scrape-kings.yml
base_generator/: NOTICE  README.md  config.json  generator.py  requirements.txt
base_generator/tempo_gen/data/: constants.py  containers.py  frequency.py
base_generator/tempo_gen/synthetic_generation/: abstract_classes.py  generator_params.py  utils.py
base_generator/tests/: diversity_check.py  test_generator_contract.py
benchmarks/: .dockerignore  Dockerfile  README.md  pyproject.toml
benchmarks/cascade_benchmark/: __init__.py  aggregate.py  cache.py  cli.py  datasets.py  predictor.py  resources.py  results.py
benchmarks/cascade_benchmark/data/: boom_low_variance.json  boom_seasonal_naive.json  gifteval_seasonal_naive.json
benchmarks/cascade_benchmark/suites/: __init__.py  _common.py  boom.py  gifteval.py  time_bench.py
benchmarks/tests/: test_aggregate.py  test_datasets.py  test_gift_rows.py  test_predictor.py  test_time_normalize.py
cascade/audit/: checks.py  main.py  rederive.py
cascade/eval/: __init__.py  benchmarks.py  bootstrap.py  gift_gate.py  koth.py  scoring.py
cascade/interface/: generator.py  validation.py
cascade/miner/: cli.py  dashboard.py  score.py  verify.py
cascade/pool/: __init__.py  builder.py  cli.py  source.py
cascade/pool/sources/: __init__.py  tsbench_forge.py
cascade/provision/: __init__.py  core.py  health.py  loop.py  main.py  policy.py  state.py
cascade/shared/: __init__.py  chain.py  chain_status.py  config.py  env.py  hippius.py  king_archive.py  logging_util.py  manifest.py  receipt.py
cascade/trainer/: bench_hook.py  contract.py  corpus.py  loop.py  main.py  remote.py  sandbox.py  sandbox_container.py  stream.py  toto2_model.py  toto2_trainer.py  wandb_sink.py  worker.py
cascade/validator/: cascade.py  eval_offload.py  loop.py  main.py  pool.py  state.py  windows.py
cascade/website/: __init__.py  index.html  vercel.json
decisions/: DEC-CA-0001-throughput-wall-is-the-law.md  DEC-CA-0002-mainnet-netuid-91.md  DEC-CA-0003-provisioner-rules-of-escalation.md  DEC-CA-0004-cascade-persist-throne.md  DEC-CA-0005-warm-start-sequencing.md  NOTE-ca-operational-invariants.md
deploy/: Dockerfile  cascade-provisioner.service  entrypoint.sh  pod.env.example  pod_bootstrap.sh  provision.mainnet.toml  provision.py  provision.testnet.toml
docs/: ARCHITECTURE.md  AUDIT.md  COMMUNICATION.md  DEPLOY_PODS.md  EVAL_POOL.md  INTERFACE.md  MAINNET_LAUNCH.md  MINER.md  VALIDATOR.md
metronome/: __init__.py
metronome/eval/: __init__.py  bootstrap.py  crps.py  koth.py  mase.py  scoring.py  seasonality.py  window.py
metronome/interface/: __init__.py  generator.py  static_guard.py  validation.py
metronome/miner/: __init__.py  cli.py  verify.py
metronome/pool/: __init__.py  builder.py  cli.py  source.py
metronome/pool/sources/: __init__.py  openmeteo.py  synthetic.py  wikimedia.py
metronome/shared/: __init__.py  chain.py  config.py  hf.py  hippius.py  manifest.py
metronome/trainer/: __init__.py  contract.py  corpus.py  loop.py  main.py  queue.py  remote.py  sandbox.py  stream.py  toto2_trainer.py  worker.py
metronome/validator/: __init__.py  evaluator.py  loop.py  main.py  pool.py  state.py  windows.py
miner-ops/: ACTION_PLAN.md  CONSERVATIVE_REBALANCE.md  EVOLUTION_ANALYSIS.md  GPU_AB_INSTRUCTIONS.md  README.md  TOP_MINERS_ANALYSIS.md  gpu_pod_bootstrap.sh  pod_score_run.sh  run_ab_validation.sh  run_single_seed.sh
miner-ops/ab_results_20260724_025429/: summary.txt
miner-ops/competitors/: fetch_competitors.py
miner-ops/competitors/ares-v6-fixed/: README.md  config.json  generator.py  requirements.txt
miner-ops/competitors/aurora-mix/: config.json  generator.py  requirements.txt
miner-ops/eval-pool/v1/: metadata.json  openmeteo__grid_-48_-107__apparent_temperature.npy  openmeteo__grid_-48_-107__cloud_cover.npy  openmeteo__grid_-48_-107__cloud_cover_low.npy  openmeteo__grid_-48_-107__cloud_cover_mid.npy  openmeteo__grid_-48_-107__dew_point_2m.npy  openmeteo__grid_-48_-107__relative_humidity_2m.npy  openmeteo__grid_-48_-107__surface_pressure.npy  openmeteo__grid_-48_-107__temperature_2m.npy  openmeteo__grid_-48_-107__wind_gusts_10m.npy  openmeteo__grid_-48_-107__wind_speed_100m.npy  openmeteo__grid_-48_-107__wind_speed_10m.npy  openmeteo__grid_-48_-124__apparent_temperature.npy  openmeteo__grid_-48_-124__cloud_cover.npy  openmeteo__grid_-48_-124__cloud_cover_low.npy  (+440 more)
miner-ops/my-generator/: README.md  STRATEGY.md  calibrate.py  config.CONSERVATIVE.json  config.json  generator.py
scripts/: archive_sync.py  make_receipts_public.sh  measure_reveal_jitter.py  probe_hub_enumeration.py  provision.example.toml  publish_chain_status.py  publish_hf_eval.py  publish_website.py  remote_hosts.example.toml  repin_worker_image.sh  scrape_kings.py
scripts/example_generator/: config.json  generator.py  requirements.txt
tests/: conftest.py
tests/fixtures/: round_receipt_v1.json  round_receipt_v2.json  round_receipt_v3.json
tests/unit/: receipt_fixture.py  test_audit.py  test_bench_hook.py  test_benchmarks_bridge.py  test_cascade.py  test_chain.py  test_chain_poll.py  test_chain_status.py  test_checkpoint_hf_fallback.py  test_config.py  test_corpus_and_verify.py  test_env.py  test_eval_math.py  test_force_burn.py  test_generator_contract.py  test_gift_gate.py  test_gpu_pinning.py  test_hippius.py  test_king_archive.py  test_koth.py  test_lane_fairness.py  test_launch_config.py  test_manifest.py  test_manifest_signing.py  test_miner_dashboard.py  test_miner_fetch.py  test_miner_hf_submit.py  test_miner_score.py  test_pool.py  test_pool_builder.py  test_pool_pin.py  test_pool_sources.py  test_pool_store.py  test_provision.py  test_provision_health.py  test_provision_loop.py  test_provision_policy.py  test_provision_state.py  test_r2_backup.py  test_receipt.py  (+24 more)
(+114 files in other folders)
