[project]
name = "metronome"
version = "0.0.1"
description = "Bittensor subnet for synthetic time-series training data, evaluated king-of-the-hill by training a fixed base model on each generator and scoring CRPS + MASE."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "tensorlink-ai" }]

dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
]

[project.optional-dependencies]
# Heavy ML stack — only the trainer (and the validator's evaluator) need torch.
train = [
    "torch>=2.2",
    "transformers>=4.40",
    "safetensors>=0.4",
    "accelerate>=0.30",
]
# Hippius storage: registry (IPFS, hippius_sdk) for models/checkpoints/generators
# + S3 (boto3) for manifests and training logs. The trainer, validator, and the
# miner `deploy` need this; the core stays installable without it.
hippius = [
    "hippius>=0.2.60",
    "boto3>=1.34",
]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
    "ruff>=0.5",
]
chain = [
    # Bittensor stack pulled in only where needed (validator, trainer, miner CLI).
    "bittensor>=8.0",
]

[project.scripts]
metronome = "metronome.miner.cli:main"
metronome-trainer = "metronome.trainer.main:main"
metronome-train-worker = "metronome.trainer.worker:main"
metronome-validator = "metronome.validator.main:main"
metronome-pool = "metronome.pool.cli:main"

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["metronome"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
markers = [
    "requires_torch: needs a working torch install (skipped in CPU-only minimal envs)",
    "requires_chain: needs a running subtensor / bittensor; skipped by default",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]
