[project]
name = "cascade"
version = "0.0.1"
description = "Bittensor subnet for synthetic time-series training data, evaluated king-of-the-hill by training a fixed base model on each generator and scoring CRPS + MASE."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "tensorlink-ai" }]

dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "python-dotenv>=1.0",   # auto-load a gitignored .env (credentials) at CLI startup
]

[project.optional-dependencies]
# Heavy ML stack — only the trainer (and the validator's evaluator) need torch.
# torch is PINNED EXACTLY (not a range) + sourced from a fixed CUDA index below:
# a KOTH duel compares king vs challenger, so every pod MUST run bit-identical
# numerics. An unpinned `torch>=2.2` let fresh `uv sync`s resolve to whatever was
# latest (2.4.1 on old pods, 2.12.1 on new) and auto-pick the CUDA build per host
# (cu124 vs cu130) — silent drift that invalidates the comparison. See also
# .python-version (pins the interpreter, else uv grabs the newest available).
train = [
    "torch==2.4.1",
    "transformers>=4.40",
    "safetensors>=0.4",
    "accelerate>=0.30",
]
# Hippius storage: registry (Hippius Hub OCI, hippius_hub) for models/
# checkpoints/generators + S3 (boto3) for manifests and training logs. The
# trainer, validator, and the miner `deploy` need this; the core stays
# installable without it.
hippius = [
    "hippius-hub",
    "huggingface_hub>=0.23",   # for hf:-pinned genesis/eval refs in fetch_from_hub
    "boto3>=1.34",
]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
    "ruff>=0.5",
]
# tsbench-forge pool source (producer/orchestrator side only): reads the forge
# scraper's parquet mirror. Validators never need this — they consume the
# built .npy pool.
pool-forge = [
    "pyarrow>=15.0",
    "pyyaml>=6.0",
    "pandas>=2.0",
]
# Ephemeral GPU-pod provisioner (deploy/provision.py). Shells out to the `lium`
# CLI (installed separately) and calls the Shadeform REST API via requests.
deploy = [
    "requests>=2.31",
]
# Optional live training dashboards (Weights & Biases). Observability only —
# the trainer mirrors its per-step S3 log into a wandb run so miners can watch
# training as it occurs. Off unless [wandb] enabled = true in chain.toml.
wandb = [
    "wandb>=0.17",
]
chain = [
    # Bittensor stack pulled in only where needed (validator, trainer, miner CLI).
    "bittensor>=8.0",
]

[project.scripts]
cascade = "cascade.miner.cli:main"
cascade-trainer = "cascade.trainer.main:main"
cascade-provisioner = "cascade.provision.main:main"
cascade-train-worker = "cascade.trainer.worker:main"
cascade-validator = "cascade.validator.main:main"
cascade-pool = "cascade.pool.cli:main"
cascade-audit = "cascade.audit.main:main"

# Pin torch to a single CUDA build (cu124) so every worker/validator resolves the
# SAME wheel regardless of the host's CUDA version — uv would otherwise auto-select
# the backend per machine (cu124 on one pod, cu130 on another). cu124 wheels run
# on newer CUDA runtimes (backward-compatible), so this is safe across SKUs.
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cascade"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
markers = [
    "requires_torch: needs a working torch install (skipped in CPU-only minimal envs)",
    "requires_chain: needs a running subtensor / bittensor; skipped by default",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]
